@@ -30,6 +30,7 @@ from .imagereader import RoperCCD
 from .imagereader import PerkinElmer
 from .imagereader import Pilatus100K
 from .imagereader import ImageReader
+from .imagereader import TIFFRead
 
 from .spec import SPECFile
 from .spec import SPECScan
